# CodeReview

./: .env.example  .gitignore  CHANGELOG.md  Makefile  README.md  critical_norms.yaml  custom_norms.yaml  docker-compose.yml  info.txt  norms.yaml  pattern.yaml  pattern_1С.yaml
backend/: alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: alembic  env.py  script.py.mako
backend/alembic/versions/: 0001_initial.py  20260103125304_user_wallets.py  20260103160000_user_auth.py  20260104120000_ai_findings.py  20260105143000_add_norm_source_fields.py  20260107160000_access_logs.py  20260110120000_caddy_access_logs.py  20260113190000_ai_findings_comment.py  20260115120000_add_companies.py  20260116100000_add_teacher_role.py  20260119130000_add_suggested_norms.py  20260122120000_add_user_settings.py  20260215190000_open_world_candidates.py  20260321120000_model_lab.py  20260321150000_admin_external_access.py
backend/app/: main.py
backend/app/api/: deps.py  router.py  utils.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/middleware/: security.py
backend/app/models/: __init__.py  access_log.py  admin_access.py  ai_finding.py  audit.py  caddy_access_log.py  company.py  enums.py  feedback.py  finding.py  llm.py  model_lab.py  norm.py  open_world_candidate.py  review_run.py  suggested_norm.py  user.py  utils.py
backend/tests/: test_diff_parser.py
ui/: README.md  (+5 more)
worker/: pyproject.toml  requirements.txt
worker/app/: config.py  main.py  models.py
worker/tests/: test_detectors.py
(+141 files in other folders)
