[project]
name = "codereview-backend"
version = "0.1.0"
description = "Backend service for 1C code review platform"
requires-python = ">=3.11"
authors = [
  { name = "CodeReview Team" }
]
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic>=2.0",
  "pydantic-settings",
  "SQLAlchemy>=2.0",
  "psycopg[binary]",
  "alembic",
  "python-dotenv",
  "PyJWT>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
